@@ -54,3 +54,5 @@ from InfoPathFilter import InfoPathFilter
 from LazyModule import lazyImport, LazyModule
 from LeafPathFilter import LeafPathFilter
 from DictPath import DictPath
+from IndexedIOPath import IndexedIOPath
+
